--- a/packages.tex
+++ b/packages.tex
@@ -9,6 +9,8 @@
 \usepackage{colortbl}
 \usepackage{scrpage2}
 \usepackage{tabularx}
+\usepackage[table]{xcolor}
+\usepackage{booktabs}
 \usepackage{ngerman}
 \usepackage{capt-of}
 \usepackage{longtable}
@@ -53,4 +55,3 @@
         stretch=10,
         shrink=10
 ]{microtype}
-
