--- a/results.tex
+++ b/results.tex
@@ -1,7 +1,10 @@
 \chapter{Ergebnisse}
 
 \input{goldpvd}
+\clearpage
 \input{siliconpvd}
+\clearpage
 \input{silicacvd}
+\clearpage
 \input{aluminaald}
 
