--- a/settings.tex
+++ b/settings.tex
@@ -4,7 +4,7 @@
 % ---------------------------------------------------------------------
 %\setcounter{secnumdepth}{2}
 %\setcounter{chapter}{-1}
-\setcounter{tocdepth}{3}
+\setcounter{tocdepth}{2}
 
 % ---------------------------------------------------------------------
 %\sloppy    % weniger Worttrennungen, größere Wortabstände
@@ -45,6 +45,7 @@
 \definecolor{Green}{rgb}{0.7 1.0 0.7}
 \definecolor{Yellow}{rgb}{1.0 1.0 0.7}
 \definecolor{Red}{rgb}{1.0 0.7 0.7}
+\definecolor{lightgray}{gray}{0.9}
 
 \newcolumntype{C}{>{\centering\arraybackslash}X}
 
