--- a/kmc.tex
+++ b/kmc.tex
@@ -1,2 +1,17 @@
 \section{Kinetic Monte Carlo-Methoden}
 
+Kinetic Monte Carlo-Methoden bezeichnen zufallsbestimmte numerische Prozesse, bei denen das System eine Reihe von diskreten Zuständen durchläuft, die auf Basis einer Übergangswahrscheinlichkeit aus dem vorhergehenden Zustand zufällig gewählt werden.
+Ursprünglich für die Simulation von  Diffusionsprozessen entwickelt, finden sie inzwischen in vielen Gebieten der Natur- und Ingenieurswissenschaften Anwendung, insbesondere auch für Nichtgleichgewichtssysteme wie  Oberflächenreaktionen und Schichtabscheidungen.
+
+Die mathematische Formulierung folgt Markov-Ketten, die eine Abfolge von Zuständen $X_t$ aus einem abzählbar großen Zustandsraum $S$ darstellen. ASD
+
+$$
+X_t = S \forall t \geq 0
+$$
+$$
+X_{t+\Delta t} = E(X_t, t)
+$$
+$$
+\Delta t = - \frac{\ln(u)}{r_i}
+$$
+
