--- a/mdtests.tex
+++ b/mdtests.tex
@@ -1,1 +1,30 @@
-\section{Tests für MD-Potentiale}
+\section{Tests für MD-Potentiale zur Schichtabscheidung}
+
+Vor der Nutzung von molekulardynamischen Parametrisierungen sollten diese auf ihre Anwendbarkeit durch eine Reihe von Tests geprüft werden.
+Dabei ist zu erwähnen, dass die Parametrisierungen für einen speziellen Zweck erstellt werden und meist nur diesen ausreichend abdecken.
+Das bedeutet einerseits, dass man Potentiale, die auf thermische Probleme optimiert sind, nur selten zur Simulation struktureller Eigenschaften nutzen kann, und umgekehrt.
+Andererseits stehen hinter jeder Parametrisierung besondere Zielsetzungen, die oft vom eigenen Einsatzgebiet abweichen und eigentlich eine Anpassung der Parametrisierung, mindestens jedoch ihre Prüfung zur Voraussetzung haben.
+
+Dem Thema der Arbeit entsprechend, sollen die zu untersuchenden Systeme strukturelle und chemische Eigenschaften in beschränkten Temperaturbereichen darstellen, was sich auch in den Tests zeigt.
+So wird die kristalline und amorphe Struktur, ihre Dichte, radiale Verteilungsfunktion, Bindungslängen und Koordination einerseits untersucht, und die Darstellbarkeit der zugrunde liegenden Reaktionen per ReaxFF-Formulierung sowie die Diffusion eines Atomes auf der Oberfläche andererseits.
+Diese Tests sind in Tabelle \ref{tab:mdtestvariants} dargestellt.
+
+\begin{table}[bhtp]
+  \rowcolors{0}{white}{lightgray}
+  \begin{tabularx}{\textwidth}{|lXX|}
+    \hline
+    \textbf{Test} & \textbf{Vorgehensweise} & \textbf{Ergebnis} \\
+    \hline
+    Kristall-Strukturoptimierung & LAMMPS minimize & Dichte, RDF, Koordination, Bindungslänge \\
+    Kristall-Relaxation & LAMMPS nvt/npt run & Dichte, RDF, Koordination, Bindungslänge \\
+    Oberflächen-Relaxierung & Relaxierung einer nichtperiodischen Struktur in unbegrenztem Raum  & Oberflächenstabilität bei geringem Druck \\
+    Präparation amorpher Struktur & zufällige Atompositionen, Relaxation bei hohen Temperaturen, Abkühlung & Dichte, Koordination, Hauptbindungslänge \\
+    Precursor-Simulation & LAMMPS nvt run jedes Precursormoleküles & Stabilität \\
+    Precursor-Reaktionen & LAMMPS nvt run beider Precursormoleküle & Reaktivität, Stabilität \\
+    Oberflächen-Reaktionen & Reaktion eines Moleküles mit einer präparierten Oberfläche & Reaktivität, Diffusionsgrad \\
+    Parsivald-Simulation & Komplette Abscheidungs-Simulation mit Parsivald & Anwendbarkeit \\
+    \hline
+  \end{tabularx}
+  \caption[asd]{dsa mit LAMMPS, Präparation mit Materials Studio}
+  \label{tab:mdtestvariants}
+\end{table}
