--- a/datastructures.tex
+++ b/datastructures.tex
@@ -471,6 +471,7 @@ Im Anschluss ist es häufig notwendig, die neu entstandenen Simplexe sowie die u
 %% \end{algorithm}
 
 \subsubsection{Alpha-Form}
+\label{dataalphaform}
 
 Die Alpha-Form (Abbildung \ref{fig:delaunay-alpha}) beschreibt anschaulich, aus welchen Punkten, Linien und Flächen die Oberfläche einer Punktmenge besteht.
 Im Gegensatz zur konvexen Hülle kann sie auch Einschlüsse, Poren und Oberflächenrauheiten je nach Wahl des $\alpha$-Wertes darstellen.
