--- a/literature.bib
+++ b/literature.bib
@@ -17,10 +17,28 @@
 
 @phdthesis{lorenz_entwicklung_2012,
 	title = {Entwicklung und Verifikation eines kombinierten Kinetic Monte Carlo / Molekulardynamik Modells zur Simulation von Schichtabscheidungen},
-	url = {http://www.qucosa.de/recherche/frontdoor/?tx_slubopus4frontend[id]=10631},
+	url = {http://nbn-resolving.de/urn:nbn:de:bsz:ch1-qucosa-106314},
+	language = {German},
 	urldate = {2014-07-24},
 	author = {Lorenz, Erik E.},
-	month = jun,
+	month = sep,
 	year = {2012},
 	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/I3FQ3MIW/Lorenz - 2012 - Entwicklung und Verifikation eines kombinierten Ki.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/P2QMAQEP/frontdoor.html:text/html}
+}
+
+@article{brillo_density_2006,
+	title = {Density and Thermal Expansion of Liquid Ag–Cu and Ag–Au Alloys},
+	volume = {27},
+	issn = {0195-928X, 1572-9567},
+	url = {http://link.springer.com/10.1007/s10765-005-0011-4},
+	doi = {10.1007/s10765-005-0011-4},
+	language = {en},
+	number = {2},
+	urldate = {2014-09-19},
+	journal = {International Journal of Thermophysics},
+	author = {Brillo, J. and Egry, I. and Ho, I.},
+	month = mar,
+	year = {2006},
+	pages = {494--506},
+	file = {art%3A10.1007%2Fs10765-005-0011-4.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/ZIMSAVXB/art%3A10.1007%2Fs10765-005-0011-4.pdf:application/pdf}
 }
